--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 .quote {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 100;
-    color: white;
+    color: black;
     text-shadow: 1px 1px 2px black;
     font-size: 2em;
     text-align: center;
@@ -22,9 +22,9 @@
     min-height: 100vh;
     padding: 64px 24px 96px;
     box-shadow: 0 0 12px -2px black;
-    color: #eee;
+    color: #884242;
     font-family: 'Open Sans', sans-serif;
-} /* this will style the body */
+} 
 
 .hondapic {
     max-height: 231px;
@@ -43,5 +43,12 @@
     max-height: 200px;
 }
 
+.project-name{
+    padding-block-start: 20px;
+    font-weight: 900;
+    font-size: 2em;
+    margin: 0 0 1em;
+    border-bottom: 1px solid white;
+}
 
 
