--- a/style.css
+++ b/style.css
@@ -91,3 +91,28 @@ img {
     box-shadow: 0 0 12px -2px black;
     color: #884242;
 }
+
+footer {
+    box-sizing :border-box;
+    position: fixed;
+    height: 64px;
+    padding: 16px;
+    bottom: 0;
+    left : 0;
+    right: 0;
+    text-align: center;
+    box-shadow: 0 -2px 4px -2px black;
+}
+
+footer .media-link {
+    height: 32px;
+}
+
+footer a {
+    margin-right: 64px;
+    text-decoration: none;
+}
+
+footer a:last-child {
+    margin-right: 0;
+}
