--- a/style.css
+++ b/style.css
@@ -116,3 +116,62 @@ footer a {
 footer a:last-child {
     margin-right: 0;
 }
+
+/* .nav {
+    display: flex;
+    justify-content: space-between;
+    background-color: #948f8f;
+    color: white;
+    padding: 10px;
+    align-items: center;
+}  */
+.nav {
+    display: flex;
+    justify-content: space-between;
+    background-color: #948f8f;
+    color: white;
+    padding: 10px;
+    align-items: center;
+}
+
+.media-link{
+    width: 30px;
+    height: 30px;
+    margin: 0 5px;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+}
+
+form {
+    max-width: 600px;
+    margin: auto;
+}
+
+label {
+    display: block;
+    margin-bottom: 8px;
+}
+
+input, textarea {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+}
+
+textarea {
+    resize: vertical;
+}
+
+input[type="submit"] {
+    background-color: #4caf50;
+    color: white;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: #45a049;
+}
